# rs-modbus

./: ALIGNMENT_REPORT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: broadcast.rs  custom_function_code.rs  interop_master.rs  interop_slave.rs  rtu_master.rs  rtu_slave.rs  tcp_master.rs  tcp_slave.rs
src/: error.rs  lib.rs  master.rs  master_session.rs  slave.rs  types.rs  utils.rs  vars.rs
src/layers/: mod.rs
src/layers/application/: ascii.rs  mod.rs  rtu.rs  tcp.rs
src/layers/physical/: mod.rs  serial.rs  tcp_client.rs  tcp_server.rs  udp.rs
tests/: ascii_framing_test.rs  ascii_hex_sentry_test.rs  ascii_hex_validation_test.rs  ascii_tcp_fragmentation_test.rs  check_range_test.rs  fallback_atomic_test.rs  fc17_serverid_validation_test.rs  fc43_conformity_test.rs  fc43_utf8_test.rs  master_concurrent_test.rs  physical_lifecycle_test.rs  rtu_custom_fc_test.rs  rtu_framing_test.rs  rtu_pool_overflow_test.rs  rtu_serial_timing_test.rs  slave_multi_connection_test.rs  slave_test.rs  tcp_fragmentation_test.rs  udp_multi_client_test.rs
