[package]
name = "rs-modbus"
version = "0.1.0"
edition = "2021"
authors = ["Xie Jay <xiejay97@gmail.com>"]
description = "A pure Rust implementation of MODBUS protocol."
license = "MIT"
repository = "https://github.com/xiejay97/rs-modbus"
documentation = "https://docs.rs/rs-modbus"
readme = "README.md"
keywords = ["modbus", "rtu", "serial", "tcp", "udp"]
categories = ["network-programming", "hardware-support"]
rust-version = "1.70"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
async-trait = "0.1"
serialport = { version = "4", optional = true }

[features]
default = []
serial = ["dep:serialport"]

[dev-dependencies]
tokio-test = "0.4"
